[project]
name = "langraph-cosmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-cosmos>=4.14.3",
    "azure-identity>=1.25.1",
    "langgraph>=1.0.5",
]

[project.scripts]
langraph-checkpoint-cosmos = "langraph_checkpoint_cosmos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langraph_cosmos"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
