[project]
name = "langraph-cosmos"
dynamic = ["version"]
description = "Library with a Cosmos DB implementation of LangGraph checkpoint saver."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-cosmos>=4.14.3",
    "azure-identity>=1.25.1",
    "langgraph>=1.0.5",
]

[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langraph_cosmos"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(-.*)?)"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
